修改图书功能

--- a/src/main/resources/static/common/headbar.html
+++ b/src/main/resources/static/common/headbar.html
@@ -36,7 +36,7 @@
                 </div>
                 <div class="modal-body">
                     <p> 图书管理系统 </p>
-                    <p> ***</p>
+                    <p> 周志远</p>
 
                 </div>
                 <div class="modal-footer">
